Tests and fixes for tests
